--- a/style.css
+++ b/style.css
@@ -1,62 +1,131 @@
-@import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap');
+
 body {
-    background:url('./resources/background.jpeg') center 46% / cover fixed;
-    font-family: 'Montserrat',sans-serif;
+    background: url('./resources/background.jpeg') center 46% / cover fixed;
+    font-family: 'Montserrat', sans-serif;
+    width: 100%;
+    color: rgba(0, 0, 0, 0.6);
+    text-shadow: 10px -15px 28px rgba(0, 0, 0, 0.4);
 }
+
+#name {
+    margin-top: 60px;
+}
+
 h1 {
-    font-size: 7rem;
+    font-size: 6rem;
 }
+
+#role {
+    margin-top: 5px;
+}
+
 h3 {
-    font-size: 4rem;
+    font-size: 3.5rem;
 }
-@media only screen and (max-width: 767px) {
-   /* Estilos para dispositivos com largura máxima de 767px */
-    body {
-        background:url('./resources/background.jpeg') ;
-        background-position: top 4% left 60%;
-   }
-    h1 {
-        font-size: 2.5rem;
-   }
-    h3 {
-        font-size: 1.5rem;
-   }
-  
+
+span {
+    display: inline-block;
+    animation: flip 9s infinite;
+    animation-delay: calc(.2s * var(--i))
 }
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-   /* Estilos para dispositivos com largura entre 768px e 991px */
-    body {
-        background:url('./resources/background.jpeg') cover;
-   }
-    h1 {
-        font-size: 4.5rem;
-   }
-    h3 {
-        font-size:3rem;
-   }
+
+#icons {
+    margin-top: 100px;
 }
+
+.btn {
+    color: rgba(249, 161, 102);
+    transition: all 0.5s;
+    position: relative;
+    font-size: 50px;
+    opacity: 90%;
+    text-shadow: 10px -15px 28px rgba(234, 109, 25, 0.58);
+}
+
+.btn:hover, .btn:focus, .btn:active {
+    transform: scale(1.1) rotate(360deg);
+    text-shadow: 0px 0px 30px white, 0px 0px 30px white;
+    transition: all 0.5s;
+    opacity: 100%;
+}
+
+.fa-envelope:hover, .fa-envelope:focus, .fa-envelope:active{
+    color: #D44638;
+}
+
+.fa-linkedin:hover, .fa-linkedin:focus, .fa-linkedin:active{
+    color: #0072b1;
+}
+
+.fa-github:hover, .fa-github:focus, .fa-github:active {
+    color: #171515;
+}
+
 .overlay {
-    position: absolute; 
+    position: absolute;
     bottom: 0;
     left: 0;
     width: 100%;
     height: 30%;
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 1));
-  }
-.btn {
-	color:rgba(249, 161, 102, 0.965); 
-	transition: all 0.5s;
-    position:relative;
-    margin: 40px;
-    font-size: 50px;
-    opacity: 60%;
-    margin-top: 100px;
-    text-decoration: none;
 }
-.btn:hover {
-    transform: scale(1.1) rotate(360deg);;
-    text-shadow: 0px 0px 30px white, 0px 0px 30px white, 0px 0px 30px rgb(196, 255, 2);
-    transition: all 0.5s;
-    color: rgb(77, 179, 77);
-    opacity: 50%;
+
+@media only screen and (max-width: 767px) {
+
+    /* Estilos para dispositivos com largura máxima de 767px */
+    body {
+        background: url('./resources/background.jpeg') top 4% left 60%;
+       
+    }
+
+    #name{
+        margin-top: 100px;
+    }
+
+    h1 {
+        font-size: 2rem;
+    }
+
+    h3 {
+        font-size: 1.2rem;
+    }
+
+    #icons {
+        margin-top: 150px;
+    }
+
+    .btn{
+        font-size: 35px;
+    }
+
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+
+    /* Estilos para dispositivos com largura entre 768px e 991px */
+    body {
+        background: url('./resources/background.jpeg') cover;
+    }
+
+    h1 {
+        font-size: 4rem;
+    }
+
+    h3 {
+        font-size: 2rem;
+    }
+
+    #icons {
+        margin-top: 125px;
+    }
+    
+}
+
+@keyframes flip {
+
+    0%,
+    80% {
+        transform: rotateY(360deg)
+    }
 }
